test/data/sg_testing2/connectivity-map.txt
warning: ignoring endpoint_gateways, TODO: add support
routing_tables resource type is not yet supported
load_balancers resource type is not yet supported
Public Internet (all ranges) => proxy-ky[10.240.1.4] : All Connections
be-ky[10.240.2.6] => opa-ky[10.240.2.4] : protocol: TCP dst-ports: 8181
fe-ky[10.240.2.5] => be-ky[10.240.2.6] : protocol: TCP
proxy-ky[10.240.1.4] => fe-ky[10.240.2.5] : protocol: TCP dst-ports: 9000

connections are stateful unless marked with *
